--- a/hugo-docker-compose.yml
+++ b/hugo-docker-compose.yml
@@ -1,11 +1,17 @@
 version: '3'
 
+
+networks:
+    loadbalancer-net:
+         external: true
+
+
 volumes:
     website_sources:
     website_static_files:
 
-services:
 
+services:
     hugo:
         image: jojomi/hugo:latest
         volumes:
@@ -20,12 +26,11 @@ services:
                 delay: 10s
                 max_attempts: 3
                 window: 120s
-    
 
     hugo-nginx:
         image: nginx:stable-alpine
-        ports:
-            - "8000:80"
+        # ports:
+        #     - "8000:80"
         volumes:
             - website_static_files:/usr/share/nginx/html/
         deploy:
@@ -34,7 +39,11 @@ services:
                 delay: 10s
                 max_attempts: 3
                 window: 120s
-
+        labels:
+            - "traefik.backend.loadbalancer.swarm=true"
+            - "traefik.port=80"
+            - "traefik.frontend.rule=Host:v22017125338957481.megasrv.de"
+            - "traefik.docker.network=traefik"
 
     hugo-git-sync:
         image: gici/git-sync
