--- a/traefik-docker-compose.yml
+++ b/traefik-docker-compose.yml
@@ -7,7 +7,7 @@ networks:
 services:
     traefik:
         image: traefik:v1.4.4
-        command: --web --docker --docker.swarmmode --docker.watch --docker.domain=traefik --logLevel=DEBUG
+        command: --web --docker --docker.swarmmode --docker.watch --docker.domain=v22017125338957481.megasrv.de --logLevel=DEBUG
         ports:
            - "80:80"
            - "8080:8080"
