--- a/hugo-docker-compose.yml
+++ b/hugo-docker-compose.yml
@@ -42,7 +42,7 @@ services:
         labels:
             - "traefik.backend.loadbalancer.swarm=true"
             - "traefik.port=80"
-            - "traefik.frontend.rule=Host:v22017125338957481.megasrv.de"
+            - "traefik.frontend.rule=Host:blog.v22017125338957481.megasrv.de"
             - "traefik.docker.network=traefik"
 
     hugo-git-sync:
