--- a/hugo-docker-compose.yml
+++ b/hugo-docker-compose.yml
@@ -29,8 +29,8 @@ services:
 
     hugo-nginx:
         image: nginx:stable-alpine
-        ports:
-            - "8000:80"
+        # ports:
+        #     - "8000:80"
         volumes:
             - website_static_files:/usr/share/nginx/html/
         networks:
@@ -43,7 +43,7 @@ services:
                 window: 120s
             labels:
                 - "traefik.backend.loadbalancer.swarm=true"
-                - "traefik.port=8000"
+                - "traefik.port=80"
                 - "traefik.frontend.rule=Host:v22017125338957481.megasrv.de"
                 - "traefik.docker.network=loadbalancer-net"
 
