--- a/portainer-docker-compose.yml
+++ b/portainer-docker-compose.yml
@@ -18,8 +18,8 @@ services:
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
             - portainer_data:/data
-        # networks:
-        #     - loadbalancer-net
+        networks:
+            - loadbalancer-net
         deploy:
             placement:
                 constraints: [node.role == manager]
