--- a/hugo-docker-compose.yml
+++ b/hugo-docker-compose.yml
@@ -10,7 +10,7 @@ volumes:
     website_sources:
     website_static_files:
     website_nginx_cache:
-
+        
 
 services:
     hugo:
@@ -19,7 +19,8 @@ services:
             - website_sources:/src
             - website_static_files:/output
         environment:
-            - HUGO_WATCH: "1"
+            - HUGO_WATCH=1
+            - HUGO_BASEURL=/
         deploy:
             restart_policy:
                 condition: on-failure
