--- a/waddleweb-docker-compose.yml
+++ b/waddleweb-docker-compose.yml
@@ -11,6 +11,8 @@ services:
         image: waddle/webclient
         networks:
             - loadbalancer-net
+        ports:
+            - "8888:80"
         deploy:
             # placement:
             #     constraints: [node.role == worker]
@@ -23,7 +25,7 @@ services:
                 max_attempts: 3
                 window: 120s
             labels:
-                - "traefik.port=80"
                 - "traefik.backend.loadbalancer.swarm=true"
+                - "traefik.port=80"
                 - "traefik.frontend.rule=Host:waddle.v22017125338957481.megasrv.de"
                 - "traefik.docker.network=loadbalancer-net"
