--- a/waddle-docker-compose.yml
+++ b/waddle-docker-compose.yml
@@ -58,12 +58,12 @@ services:
                 parallelism: 1
                 delay: 10s
             labels:
-                - traefik.enable: "true"
-                - traefik.frontend.passHostHeader: "true"
-                - traefik.backend.loadbalancer.stickiness: "true"
-                - traefik.backend.loadbalancer.swarm: "true"
-                - traefik.port: "9000"
-                - traefik.frontend.rule: "Host:v22017125338957481.megasrv.de"
-                - traefik.docker.network: "loadbalancer-net"
+                traefik.enable: "true"
+                traefik.frontend.passHostHeader: "true"
+                traefik.backend.loadbalancer.stickiness: "true"
+                traefik.backend.loadbalancer.swarm: "true"
+                traefik.port: "9000"
+                traefik.frontend.rule: "Host:v22017125338957481.megasrv.de"
+                traefik.docker.network: "loadbalancer-net"
 
 
