--- a/waddle-docker-compose.yml
+++ b/waddle-docker-compose.yml
@@ -63,7 +63,7 @@ services:
                 traefik.backend.loadbalancer.stickiness: "true"
                 traefik.backend.loadbalancer.swarm: "true"
                 traefik.port: "9000"
-                traefik.frontend.rule: "Host:v22017125338957481.megasrv.de"
+                traefik.frontend.rule: "Host:api.v22017125338957481.megasrv.de"
                 traefik.docker.network: "loadbalancer-net"
 
 
