--- a/waddle-docker-compose.yml
+++ b/waddle-docker-compose.yml
@@ -12,11 +12,11 @@ networks:
         external: true
 
 secrets:
-    POSTGRES_PASSWORD:
+    postgres_password:
         external: true
-    HASH_KEY:
+    hash_key:
         external: true
-    CIPHER_KEY:
+    cipher_key:
         external: true
 
 services:
@@ -31,7 +31,7 @@ services:
             - postgres-net
         environment:
             POSTGRES_USER: waddle
-            POSTGRES_PASSWORD: /run/secrets/POSTGRES_PASSWORD
+            POSTGRES_PASSWORD: /run/secrets/postgres_password
             POSTGRES_DB: waddle
 
 
@@ -48,13 +48,13 @@ services:
             POSTGRES_HOSTNAME: postgres-db
             POSTGRES_PORT: 5432
             POSTGRES_USER: waddle
-            POSTGRES_PASSWORD: /run/secrets/POSTGRES_PASSWORD
+            POSTGRES_PASSWORD: /run/secrets/postgres_password
             POSTGRES_DB: waddle
 
             PORT: 9001
 
-            HASH_KEY: /run/secrets/HASH_KEY
-            CIPHER_KEY: /run/secrets/CIPHER_KEY
+            HASH_KEY: /run/secrets/hash_key
+            CIPHER_KEY: /run/secrets/cipher_key
 
         deploy:
             mode: replicated
