--- a/waddle-docker-compose.yml
+++ b/waddle-docker-compose.yml
@@ -30,9 +30,9 @@ services:
         networks:
             - postgres-net
         environment:
-            POSTGRES_USER: waddle
-            POSTGRES_PASSWORD: /run/secrets/postgres_password
-            POSTGRES_DB: waddle
+            "POSTGRES_USER=waddle"
+            "POSTGRES_PASSWORD=/run/secrets/postgres_password"
+            "POSTGRES_DB=waddle"
 
 
     apiserver:
@@ -45,16 +45,16 @@ services:
             - loadbalancer-net
         
         environment:
-            POSTGRES_HOSTNAME: postgres-db
-            POSTGRES_PORT: 5432
-            POSTGRES_USER: waddle
-            POSTGRES_PASSWORD: /run/secrets/postgres_password
-            POSTGRES_DB: waddle
+            "POSTGRES_HOSTNAME=postgres-db"
+            "POSTGRES_PORT=5432"
+            "POSTGRES_USER=waddle"
+            "POSTGRES_PASSWORD=/run/secrets/postgres_password" 
+            "POSTGRES_DB=waddle"
 
-            PORT: 9001
+            "PORT=9001"
 
-            HASH_KEY: /run/secrets/hash_key
-            CIPHER_KEY: /run/secrets/cipher_key
+            "HASH_KEY=/run/secrets/hash_key"
+            "CIPHER_KEY=/run/secrets/cipher_key"
 
         deploy:
             mode: replicated
