--- a/waddle-docker-compose.yml
+++ b/waddle-docker-compose.yml
@@ -76,5 +76,8 @@ services:
 
 secrets:
     postgres_password:
+        external: true
     hash_key:
+        external: true
     cipher_key:
+        external: true
