--- a/waddle-docker-compose.yml
+++ b/waddle-docker-compose.yml
@@ -26,9 +26,9 @@ services:
         secrets:
             - postgres_password
         environment:
-            - POSTGRES_USER=waddle
-            - POSTGRES_PASSWORD=/run/secrets/postgres_password
-            - POSTGRES_DB=waddle
+            POSTGRES_USER: vapor
+            POSTGRES_DB: vapor
+            POSTGRES_PASSWORD: vapor
 
 
     apiserver:
