--- a/waddle-docker-compose.yml
+++ b/waddle-docker-compose.yml
@@ -58,8 +58,8 @@ services:
             POSTGRES_PASSWORD_FILE: /run/secrets/postgres_password
             POSTGRES_DB: vapor
 
-            HASH_KEY: /run/secrets/hash_key
-            CIPHER_KEY: /run/secrets/cipher_key
+            HASH_KEY_FILE: /run/secrets/hash_key
+            CIPHER_KEY_FILE: /run/secrets/cipher_key
 
         deploy:
             mode: replicated
