--- a/waddle-docker-compose.yml
+++ b/waddle-docker-compose.yml
@@ -37,7 +37,17 @@ services:
             POSTGRES_USER: waddle
             POSTGRES_DB: waddle
             POSTGRES_PASSWORD_FILE: /run/secrets/postgres_password
-
+        deploy:
+            mode: replicated
+            replicas: 1
+            restart_policy:
+                condition: on-failure
+                delay: 10s
+                max_attempts: 3
+                window: 120s
+            update_config:
+                parallelism: 1
+                delay: 10s
 
     apiserver:
         image: waddle/webserver
