--- a/jenkins-docker-compose.yml
+++ b/jenkins-docker-compose.yml
@@ -13,13 +13,14 @@ services:
     jenkins:
         image: jenkins/jenkins:lts
         ports:
-           - "8081:8080"
-           - "50000:50000"
+           # - "8081:8080"
+           # - "50000:50000"
         networks:
             - loadbalancer-net
         volumes:
             - jenkins_home:/var/jenkins_home
-        # environment:
+        environment:
+            JAVA_OPTS: "-Djava.awt.headless=true"
         deploy:
             restart_policy:
                 condition: on-failure
