--- a/mail-docker-compose.yml
+++ b/mail-docker-compose.yml
@@ -44,8 +44,8 @@ services:
             interval: 20s
             timeout: 10s
             retries: 3
-        logging:
-            driver: json-file
+        # logging:
+        #     driver: json-file
         # cap_add:
         #         - NET_ADMIN
         #         - SYS_PTRACE
