--- a/mail-docker-compose.yml
+++ b/mail-docker-compose.yml
@@ -1,53 +1,33 @@
-version: '3.1'
-
-volumes:
-    maildata:
-    mailstate:
-    mailssl:
+version: '3'
 
 services:
-    mail:
-        image: tvial/docker-mailserver:latest
-        ports:
-                - "25:25"
-                - "143:143"
-                - "587:587"
-                - "993:993"
-        volumes:
-                - maildata:/var/mail
-                - mailstate:/var/mail-state
-                - mailssl:/tmp/ssl
-                - ./config/:/tmp/docker-mailserver/
-                
-        environment:
-                - ENABLE_SPAMASSASSIN=1
-                - ENABLE_CLAMAV=0
-                - ONE_DIR=0
-                - ENABLE_FETCHMAIL=0
-                - OVERRIDE_HOSTNAME=mail.v22017125338957481.megasrv.de
-                - POSTMASTER_ADDRESS=info@v22017125338957481.megasrv.de
-                - DMS_DEBUG=0
-        deploy:
-            replicas: 1
-            update_config:
-                parallelism: 1
-                delay: 30s
-                monitor: 10s
-            restart_policy:
-                condition: on-failure
-                delay: 5s
-                max_attempts: 10
-                window: 60s
+  mail:
+    image: tvial/docker-mailserver:latest
+    hostname: mail
+    domainname: domain.com
+    container_name: mail
+    ports:
+    - "25:25"
+    - "143:143"
+    - "587:587"
+    - "993:993"
+    volumes:
+    - maildata:/var/mail
+    - mailstate:/var/mail-state
+    - ./config/:/tmp/docker-mailserver/
+    environment:
+    - ENABLE_SPAMASSASSIN=1
+    - ENABLE_CLAMAV=1
+    - ENABLE_FAIL2BAN=1
+    - ENABLE_POSTGREY=1
+    - ONE_DIR=1
+    - DMS_DEBUG=0
+    cap_add:
+    - NET_ADMIN
+    - SYS_PTRACE
 
-        healthcheck:
-            test: ["CMD", "curl", "-f", "localhost:143"]
-            interval: 20s
-            timeout: 10s
-            retries: 3
-        # logging:
-        #     driver: json-file
-        # cap_add:
-        #         - NET_ADMIN
-        #         - SYS_PTRACE
-
-
+volumes:
+  maildata:
+    driver: local
+  mailstate:
+    driver: local
