--- a/portainer-docker-compose.yml
+++ b/portainer-docker-compose.yml
@@ -34,5 +34,5 @@ services:
             labels:
                 - "traefik.backend.loadbalancer.swarm=true"
                 - "traefik.port=9000"
-                - "traefik.frontend.rule=Host:portainer.v22017125338957481.megasrv.de"
+                - "traefik.frontend.rule=Host:portainer.hagen-hasenbalg.de"
                 - "traefik.docker.network=loadbalancer-net"
