--- a/waddle-docker-compose.yml
+++ b/waddle-docker-compose.yml
@@ -90,7 +90,7 @@ services:
                 traefik.backend.loadbalancer.stickiness: "true"
                 traefik.backend.loadbalancer.swarm: "true"
                 traefik.port: "9001"
-                traefik.frontend.rule: "Host:api.v22017125338957481.megasrv.de"
+                traefik.frontend.rule: "Host:api.waddle.hagen-hasenbalg.de"
                 traefik.docker.network: "loadbalancer-net"
 
 
