--- a/jenkins-docker-compose.yml
+++ b/jenkins-docker-compose.yml
@@ -30,7 +30,7 @@ services:
             labels:
                 - "traefik.backend.loadbalancer.swarm=true"
                 - "traefik.port=8080"
-                - "traefik.frontend.rule=Host:jenkins.v22017125338957481.megasrv.de"
+                - "traefik.frontend.rule=Host:jenkins.hagen-hasenbalg.de"
                 - "traefik.docker.network=loadbalancer-net"
             
 
