--- a/jenkins-docker-compose.yml
+++ b/jenkins-docker-compose.yml
@@ -12,9 +12,9 @@ networks:
 services:
     jenkins:
         image: jenkins/jenkins:lts
-        ports:
-           # - "8081:8080"
-           # - "50000:50000"
+        # ports:
+        #    - "8081:8080"
+        #    - "50000:50000"
         networks:
             - loadbalancer-net
         volumes:
