--- a/gitlab-docker-compose.yml
+++ b/gitlab-docker-compose.yml
@@ -16,9 +16,9 @@ services:
     gitlab:
         image: gitlab/gitlab-ce:latest
         volumes:
-            gitlab_config:/etc/gitlab
-            gitlab_logs:/var/log/gitlab 
-            gitlab_data:/var/opt/gitlab 
+            - gitlab_config:/etc/gitlab
+            - gitlab_logs:/var/log/gitlab 
+            - gitlab_data:/var/opt/gitlab 
         environment:
         hostname: gitlab.hagen-hasenbalg.de
         deploy:
