--- a/gitlab-docker-compose.yml
+++ b/gitlab-docker-compose.yml
@@ -20,6 +20,8 @@ services:
             - gitlab_logs:/var/log/gitlab 
             - gitlab_data:/var/opt/gitlab 
         hostname: gitlab.hagen-hasenbalg.de
+        ports:
+            - "8888:80"
         deploy:
             restart_policy:
                 condition: on-failure
