--- a/wenkan-docker-compose.yml
+++ b/wenkan-docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 
 networks:
-  traefik:
-    external: true
+    traefik:
+        external: true
 
 volumes:
     wenkan_wekandb_data:
@@ -13,59 +13,59 @@ volumes:
 
 services:
 
-  wekandb:
-    image: mongo:latest
-    command: mongod --smallfiles --oplogSize 128
-    networks:
-      - internal
-    volumes:
-      - wenkan_wekandb_data:/data/db
-      - wenkan_wekandb_dump:/dump
+    wekandb:
+        image: mongo:latest
+        command: mongod --smallfiles --oplogSize 128
+        networks:
+            - internal
+        volumes:
+            - wenkan_wekandb_data:/data/db
+            - wenkan_wekandb_dump:/dump
 
-  proxy:
-    image: zappi/oauth2_proxy
-    env_file: /var/data/config/wekan/wekan.env
-    networks:
-      - traefik
-      - internal
-    volumes:
-      - wenkan_oauth2_proxy/authenticated-emails.txt:/authenticated-emails.txt
-    deploy:
-      labels:
-        - traefik.frontend.rule=Host:wekan.hagen-hasenbalg.de
-        - traefik.docker.network=traefik
-        - traefik.port=4180
-    command: |
-      -cookie-secure=false
-      -upstream=http://wekan:80
-      -redirect-url=https://wekan.example.com
-      -http-address=http://0.0.0.0:4180
-      -email-domain=example.com
-      -provider=github
-      -authenticated-emails-file=/authenticated-emails.txt
+    proxy:
+        image: zappi/oauth2_proxy
+        env_file: /var/data/config/wekan/wekan.env
+        networks:
+            - traefik
+            - internal
+        volumes:
+            - wenkan_oauth2_proxy/authenticated-emails.txt:/authenticated-emails.txt
+        deploy:
+            labels:
+                - traefik.frontend.rule=Host:wekan.hagen-hasenbalg.de
+                - traefik.docker.network=traefik
+                - traefik.port=4180
+        command: |
+            -cookie-secure=false
+            -upstream=http://wekan:80
+            -redirect-url=https://wekan.hagen-hasenbalg.de
+            -http-address=http://0.0.0.0:4180
+            -email-domain=wekan.hagen-hasenbalg.de
+            -provider=github
+            -authenticated-emails-file=/authenticated-emails.txt
 
-  wekan:
-    image: wekanteam/wekan:latest
-    networks:
-      - internal
-    env_file: wekan.env
+    wekan:
+        image: wekanteam/wekan:latest
+        networks:
+            - internal
+        env_file: wekan.env
 
-  db-backup:
-    image: mongo:latest
-    env_file : /var/data/config/wekan/wekan.env
-    volumes:
-       - wenkan_wekandb_dump:/dump
-      - /etc/localtime:/etc/localtime:ro
-    entrypoint: |
-      bash -c 'bash -s <<EOF
-      trap "break;exit" SIGHUP SIGINT SIGTERM
-      sleep 2m
-      while /bin/true; do
-        mongodump -h db --gzip --archive=/dump/dump_\`date +%d-%m-%Y"_"%H_%M_%S\`.mongo.gz
-        (ls -t /dump/dump*.mongo.gz|head -n $$BACKUP_NUM_KEEP;ls /dump/dump*.mongo.gz)|sort|uniq -u|xargs rm -- {}
-        sleep $$BACKUP_FREQUENCY
-      done
-      EOF'
-    networks:
-    - internal    
+    db-backup:
+        image: mongo:latest
+        env_file : /var/data/config/wekan/wekan.env
+        volumes:
+            - wenkan_wekandb_dump:/dump
+            - /etc/localtime:/etc/localtime:ro
+        entrypoint: |
+            bash -c 'bash -s <<EOF
+            trap "break;exit" SIGHUP SIGINT SIGTERM
+            sleep 2m
+            while /bin/true; do
+                mongodump -h db --gzip --archive=/dump/dump_\`date +%d-%m-%Y"_"%H_%M_%S\`.mongo.gz
+                (ls -t /dump/dump*.mongo.gz|head -n $$BACKUP_NUM_KEEP;ls /dump/dump*.mongo.gz)|sort|uniq -u|xargs rm -- {}
+                sleep $$BACKUP_FREQUENCY
+            done
+            EOF'
+        networks:
+        - internal        
 
