--- a/drone-docker-compose.yml
+++ b/drone-docker-compose.yml
@@ -32,9 +32,9 @@ services:
 
         restart: always
         deploy:
-            placement:
-                constraints:
-                    - node.role==worker
+            # placement:
+            #     constraints:
+            #         - node.role==worker
             replicas: 1
             restart_policy:
                 condition: on-failure
@@ -58,9 +58,9 @@ services:
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
         deploy:
-            placement:
-                constraints:
-                    - node.role==worker
+            # placement:
+            #     constraints:
+            #         - node.role==worker
             replicas: 3
             restart_policy:
                 condition: on-failure
