--- a/gogs-docker-compose.yml
+++ b/gogs-docker-compose.yml
@@ -15,9 +15,9 @@ services:
     gogs:
       image: gogs/gogs:latest
       restart: always
-      ports:
-       # - "10022:22"
-       # - "3000:3000"
+      # ports:
+      #  - "10022:22"
+      #  - "3000:3000"
       environment:
         - "RUN_CROND=true"
       networks:
