--- a/gogs-docker-compose.yml
+++ b/gogs-docker-compose.yml
@@ -2,42 +2,70 @@ version: '3'
 
 networks:
     postgres-net:
-        external: true
+        external: false
     loadbalancer-net:
         external: true
 
 volumes:
     gogs-data:
-      driver: local
+        driver: local
 
+secrets:
+    postgres_password:
+        external: true
 services:
 
     gogs:
-      image: gogs/gogs:latest
-      restart: always
-      # ports:
-      #  - "10022:22"
-      #  - "3000:3000"
-      environment:
-        - "RUN_CROND=true"
-      networks:
-        - loadbalancer-net
-      volumes:
-        - "gogs-data:/data"
-      depends_on:
-        - postgres
-      deploy:
-        # placement:
-        #   constraints:
-        #     - node.role==worker
-        restart_policy:
-          condition: on-failure
-          delay: 5s
-          max_attempts: 3
-          window: 120s
-        labels:
-          - "traefik.enable=true"
-          - "traefik.port=3000"
-          - "traefik.backend=git"
-          - "traefik.docker.network=loadbalancer-net"
-          - "traefik.frontend.rule=Host:git.hagen-hasenbalg.de"
+        image: gogs/gogs:latest
+        restart: always
+        # ports:
+        #    - "10022:22"
+        #    - "3000:3000"
+        environment:
+            - "RUN_CROND=true"
+        networks:
+            - loadbalancer-net
+        volumes:
+            - "gogs-data:/data"
+        depends_on:
+            - postgres
+        deploy:
+            # placement:
+            #     constraints:
+            #         - node.role==worker
+            restart_policy:
+                condition: on-failure
+                delay: 5s
+                max_attempts: 3
+                window: 120s
+            labels:
+                - "traefik.enable=true"
+                - "traefik.port=3000"
+                - "traefik.backend=git"
+                - "traefik.docker.network=loadbalancer-net"
+                - "traefik.frontend.rule=Host:git.hagen-hasenbalg.de"
+    postgres-db:
+        image: postgres
+        # ports:
+        #     - "5432:5432"
+        volumes:
+            - postgres_db_data:/var/lib/postgresql/data
+        networks:
+            - postgres-net
+        secrets:
+            - postgres_password
+        environment:
+            POSTGRES_USER: waddle
+            POSTGRES_DB: waddle
+            POSTGRES_PASSWORD_FILE: /run/secrets/postgres_password
+        deploy:
+            mode: replicated
+            replicas: 1
+            restart_policy:
+                condition: on-failure
+                delay: 10s
+                max_attempts: 3
+                window: 120s
+            update_config:
+                parallelism: 1
+                delay: 10s
