--- a/hugo-docker-compose.yml
+++ b/hugo-docker-compose.yml
@@ -8,7 +8,7 @@ networks:
 volumes:
     website_sources:
     website_static_files:
-        external: true
+        source: /usr/share/nginx/html/
 
 
 services:
