--- a/hugo-docker-compose.yml
+++ b/hugo-docker-compose.yml
@@ -48,7 +48,7 @@ services:
     hugo-git-sync:
         image: gici/git-sync
         environment:
-            GIT_SYNC_REPO: "https://github.com/SeriousShit/website.git"
+            GIT_SYNC_REPO: "https://github.com/hhasenbalg/website.git"
             GIT_SYNC_DEST: /src 
             GIT_SYNC_BRANCH: master
             GIT_SYNC_REV: "FETCH_HEAD" 
