--- a/gitea-docker-compose.yml
+++ b/gitea-docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - gitea
       - loadbalancer-net
     volumes:
-      - ./gitea:/data
+      - gitea:/data
     ports:
       - "222:22"
     deploy:
